# fileherder

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
fileherder/: operations.py
fileherder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
