[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fileherder"
version = "1.0.1"
description = "Lightweight file management utilities for deduplication and organization"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Luke Steuber", email = "luke@dr.eamer.dev" }
]
keywords = ["files", "deduplication", "organization", "utilities"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]

[project.optional-dependencies]
cli = ["rich>=10.0.0"]
dev = ["pytest>=7.0.0", "pytest-cov>=3.0.0"]

[project.scripts]
fileherder = "fileherder.cli:main"

[project.urls]
Homepage = "https://github.com/lukesteuber/fileherder"
Repository = "https://github.com/lukesteuber/fileherder"
"Bug Reports" = "https://github.com/lukesteuber/fileherder/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
